<resources>
    <string name="app_name" translatable="false">Sfen</string>
    <string name="title_activity_main" translatable="false">Sfen</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_event">Add new event above to get started!</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_profile">Profile</string>
    <string name="error_select_condition">You must select at least one condition!</string>
    <string name="error">Oops!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_new">New action</string>
    <string name="action_new_sub">Click here to add new action.</string>
    <string name="calllist_new">New entry</string>
    <string name="calllist_new_sub">Click here to add new entry.</string>
    <string name="condition_new">New condition</string>
    <string name="condition_new_sub">Click here to add new condition.</string>
    <string name="option_location">Location</string>
    <string name="option_time">Time</string>
    <string name="option_message">Message</string>
    <string name="title_activity_log">Log</string>
    <string name="add_new_profile">Add new profile above to get started!</string>
    <string name="location_setting_enabled">Location setting has to be enabled in System Settings.</string>
    <string name="location_not_available">Location not available</string>
    <string name="location_enabled_new_provider">Enabled new provider %s</string>
    <string name="location_disabled_provider">Disabled provider %s</string>
    <string name="allow_single_contact">Allow Single contact</string>
    <string name="deny_single_contact">Deny Single contact</string>
    <string name="allow_group">Allow Group</string>
    <string name="deny_group">Deny Group</string>
    <string name="allow_phone_number">Allow Phone number</string>
    <string name="deny_phone_number">Deny Phone number</string>
    <string name="select_option">Select option</string>
    <string name="single_contacts">Single contacts</string>
    <string name="select_contacts_to_continue">Select contact(s) to continue</string>
    <string name="groups">Groups</string>
    <string name="select_groups_to_continue">Select group(s) to continue</string>
    <string name="enter_phone_number">Enter (part of) phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_must_contain">Phone number must contain more than 3 numbers!</string>
    <string name="number_of_minutes_store_cell">Number of minutes to store cell tower IDs:</string>
    <string name="already_recording_until">Already recording until: %s</string>
    <string name="record_as_long_as_sfen_running">Record cell tower IDs as long as Sfen is running?</string>
    <string name="cell_tower_ids">Cell tower IDs</string>
    <string name="cell_add_more_minutes">Next time, add more minutes, okay?</string>
    <string name="cells_new_added_for_next_minutes">New cells will be added to the list for the next %1$d minutes</string>
    <string name="cells_running_until_sfen_running">New cells will be added to the list for the whole time of Sfen running</string>
    <string name="clear_and_cancel"><![CDATA[Clear & Cancel]]></string>
    <string name="cells_no_cells_to_show">No cells to show. Try to record few first</string>
    <string name="cell_tower_history">Cell tower history</string>
    <string name="no_mobile_connection">No mobile connection.</string>
    <string name="unknown_cell_type">Unknown cell type (%s)!</string>
    <string name="inside_location">Inside Location</string>
    <string name="inside_location_description">Inside Location</string>
    <string name="outside_location">Outside Location</string>
    <string name="outside_location_description">Outside Location</string>
    <string name="time_range">Time Range</string>
    <string name="time_range_description">Time Range</string>
    <string name="specific_time">Specific Time</string>
    <string name="specific_time_description">Specific Time</string>
    <string name="days">Days</string>
    <string name="days_description">Days</string>
    <string name="days_of_week">Day(s) of week</string>
    <string name="days_of_week_description">Day(s) of week</string>
    <string name="connected_to_wifi">Connected to Wifi</string>
    <string name="connected_to_wifi_description">Connected to Wifi</string>
    <string name="disconnected_from_wifi">Disconnected from Wifi</string>
    <string name="disconnected_from_wifi_description">Disconnected from Wifi</string>
    <string name="screen_on">Screen On</string>
    <string name="screen_on_description">If screen is on</string>
    <string name="screen_off">Screen Off</string>
    <string name="screen_off_description">If screen is off</string>
    <string name="connected_to_cells">Connected to Cells</string>
    <string name="connected_to_cells_description">When connected to specific Cell IDs</string>
    <string name="not_connected_to_cells">Not connected to Cells</string>
    <string name="not_connected_to_cells_description">When not connected to specific Cell IDs</string>
    <string name="event_running">Event running</string>
    <string name="event_running_description">Another Event currently running</string>
    <string name="event_not_running">Event not running</string>
    <string name="event_not_running_description">Another Event currently not running</string>
    <string name="gps_enabled">GPS enabled</string>
    <string name="gps_enabled_description">If GPS is enabled</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="gps_disabled_description">If GPS is disabled</string>
    <string name="battery_level">Battery level</string>
    <string name="battery_level_description">Selected battery level</string>
    <string name="battery_status">Battery status</string>
    <string name="battery_status_description">Status of battery</string>
    <string name="bluetooth_connected">Bluetooth Connected</string>
    <string name="bluetooth_connected_description">If bluetooth is connected</string>
    <string name="bluetooth_disconnected">Bluetooth Disconnected</string>
    <string name="bluetooth_disconnected_description">If bluetooth is disconnected</string>
    <string name="headset_connected">Headset connected</string>
    <string name="headset_connected_description">If Headset is connected</string>
    <string name="headset_disconnected">Headset disconnected</string>
    <string name="headset_disconnected_description">If Headset is disconnected</string>
    <string name="show_notification">Show notification</string>
    <string name="show_notification_description">Will show notification in notification area</string>
    <string name="enable_wifi">Enable Wifi</string>
    <string name="enable_wifi_description">Enable Wifi when conditions met</string>
    <string name="disable_wifi">Disable Wifi</string>
    <string name="disable_wifi_description">Disable Wifi when conditions met</string>
    <string name="enable_mobile_data">Enable Mobile Data</string>
    <string name="enable_mobile_data_description">Available for rooted phones only</string>
    <string name="disable_mobile_data">Disable Mobile Data</string>
    <string name="disable_mobile_data_description">Available for rooted phones only</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_description">Vibrate phone when triggered</string>
    <string name="play_sfen">Play Sfen</string>
    <string name="play_sfen_description">Will make a sheep sound</string>
    <string name="dialog_with_text">Dialog with text</string>
    <string name="dialog_with_text_description">Will show dialog with text</string>
    <string name="open_application">Open application</string>
    <string name="open_application_description">Will open specified application</string>
    <string name="open_shortcut">Open shortcut</string>
    <string name="open_shortcut_description">Will open specified shortcut</string>
    <string name="run_event">Run Event</string>
    <string name="run_event_description">Will run specified event</string>
    <string name="priority_1">Low</string>
    <string name="priority_2">Bah</string>
    <string name="priority_3">Normal</string>
    <string name="priority_4">Beee!</string>
    <string name="priority_5">High</string>
    <string name="pick_condition">Pick condition</string>
    <string name="pick_action">Pick action</string>
    <string name="editing_event">Editing %s</string>
    <string name="profile">Profile</string>
    <string name="profile_select">Click here to select profile</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="select_profile_or_action">You must select Event profile OR at least one action!</string>
    <string name="active">Active</string>
    <string name="ready">Ready</string>
    <string name="event_pick_name">Pick name</string>
    <string name="event_name_cannot_be_empty">Event name cannot be empty.</string>
    <string name="priority">Priority</string>
    <string name="no_profiles">There are no profiles! Go create one now!</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="number_of_minutes">Number of minutes:</string>
    <string name="delay_event_description">If conditions after the delay are not met, the Event won\'t trigger actions.</string>
    <string name="delay_event_recheck">Recheck conditions after?</string>
    <string name="delay_options">Delay options</string>
    <string name="delay_enter_minutes">Insert minutes next time and all is going to be okay.</string>
    <string name="shortcut">Shortcut</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="edit">Edit</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="delete">Delete</string>
    <string name="activate">Activate</string>
    <string name="geofence_service_not_available">Geofence service is not available now. Typically this is because the user turned off location access in settings > location access (%1$d)</string>
    <string name="events">Events</string>
    <string name="profiles">Profiles</string>
    <string name="service_will_be_stopped">Service will be stopped and Events won\'t be triggered.

Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copied_to_clipboard">Events and Profiles copied to clipboard!</string>
    <string name="import_string">Import string</string>
    <string name="nothing_to_import">Nothing to import!</string>
    <string name="advanced">Advanced</string>
    <string name="ringtone">Ringtone</string>
    <string name="notification">Notification</string>
    <string name="music_video_games_and_other_media"><![CDATA[Music, video, games & other media]]></string>
    <string name="alarm">Alarm</string>
    <string name="general">General</string>
    <string name="enable_root">Enable Root</string>
    <string name="root_summary">Some options in applications will only work if Root is enabled</string>
    <string name="start_at_boot">Start at boot</string>
    <string name="start_at_boot_summary">Sfen will launch itself when device boots up</string>
    <string name="record_cell_tower_ids">Record Cell Tower IDs</string>
    <string name="record_cell_tower_ids_summary">Record and store cell tower IDs for specific time</string>
    <string name="cell_towers_history">Cell Towers History</string>
    <string name="cell_towers_history_summary">View history of saved cell tower IDs</string>
    <string name="exit">Exit</string>
    <string name="export_settings">Export settings</string>
    <string name="import_settings">Import settings</string>
    <string name="preferences">Preferences</string>
    <string name="logs">Logs</string>
</resources>