<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general" >
        <CheckBoxPreference
            android:title="@string/enable_root"
            android:defaultValue="false"
            android:summary="@string/root_summary"
            android:key="rootEnable"/>

        <CheckBoxPreference
            android:title="@string/start_at_boot"
            android:defaultValue="false"
            android:summary="@string/start_at_boot_summary"
            android:key="launchAtBoot" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/advanced">
        <Preference
            android:title="@string/record_cell_tower_ids"
            android:summary="@string/record_cell_tower_ids_summary"
            android:key="openCellTowerRecordDialog" />

        <Preference android:title="@string/cell_towers_history"
            android:summary="@string/cell_towers_history_summary"
            android:key="openCellTowersHistoryDialog" />


    </PreferenceCategory>
</PreferenceScreen>